# pman

./: .gitignore  CMakeLists.txt  README.md
src/: main_control.cc  pman.cc  project.cc  project_manager.cc  project_repository.cc  ui_components.cc
src/include/: project.hh  project_manager.hh  project_repository.hh  ui_components.hh
tests/: test_manager.cpp  test_repository.cpp
